--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 asttokens==3.0.0
+beautifulsoup4==4.14.2
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
 comm==0.2.3
 contourpy==1.3.3
+cryptography==46.0.3
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
@@ -8,10 +14,20 @@ executing==2.2.1
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
+gdown==5.2.0
+google-api-core==2.28.1
+google-api-python-client==2.43.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+google-auth-oauthlib==0.5.3
+googleapis-common-protos==1.72.0
+httplib2==0.31.0
+idna==3.11
 ipykernel==7.0.1
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+jeepney==0.9.0
 Jinja2==3.1.6
 joblib==1.5.2
 jupyter_client==8.6.3
@@ -39,6 +55,7 @@ nvidia-nccl-cu12==2.27.5
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
+oauthlib==3.3.1
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
@@ -46,19 +63,30 @@ pexpect==4.9.0
 pillow==12.0.0
 platformdirs==4.5.0
 prompt_toolkit==3.0.52
+proto-plus==1.26.1
+protobuf==6.33.0
 psutil==7.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
 scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
-setuptools==80.9.0
+SecretStorage==3.3.3
+setuptools==59.6.0
 six==1.17.0
+soupsieve==2.8
 stack-data==0.6.3
 sympy==1.14.0
 threadpoolctl==3.6.0
@@ -70,4 +98,8 @@ traitlets==5.14.3
 triton==3.5.0
 typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+versioneer==0.29
 wcwidth==0.2.14
+wheel==0.37.1
